istio-bookinfo/nginx/istio.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: nginx
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      name: http
      number: 80
      protocol: HTTP
    hosts:
    - ng.test.com
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx
spec:
  hosts:
  - ng.test.com
  gateways:
  - nginx
  http:
  - match:
    - uri:
        prefix: /tc
    rewrite:
      uri: /
    headers:
      request:
        set:
          test: "true"
    route:
    - destination:
        host: nginx
        subset: v2
  - match:
    - uri:
        prefix: /ng
    rewrite:
      uri: /
    route:
    - destination:
        host: nginx
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-tc
spec:
  hosts:
  - ng.test.com
  gateways:
  - nginx
  http:
  - match:
    - uri:
        prefix: /manager
    - uri:
        prefix: /host-manage
    route:
    - destination:
        host: nginx
        subset: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-inner
spec:
  hosts:
  - nginx
  http:
  - route:
    - destination:
        host: nginx
        subset: v1
      weight: 50
    - destination:
        host: nginx
        subset: v2
      weight: 50
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: nginx
spec:
  host: nginx
  trafficPolicy:
    loadBalancer:
      simple: LEAST_CONN
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
  - name: v3
    labels:
      version: v3
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
